<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".screens.profile.ProfileFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:clipToPadding="false"
		android:padding="@dimen/default_padding">

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/profile_bim"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_margin"
			android:elevation="@dimen/elevation_medium"
			app:cardBackgroundColor="?attr/colorSurfaceSubtle"
			app:cardCornerRadius="@dimen/default_corner">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/default_padding">

				<TextView
					android:id="@+id/textView_bmi_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/profile_bmi_label"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:drawableStartCompat="@drawable/ic_more_info"
					android:drawablePadding="@dimen/info_icon_padding"
					android:foreground="@drawable/ripple" />

				<TextView
					android:id="@+id/textView_bmi_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/default_margin"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:layout_constraintBottom_toBottomOf="@+id/textView_bmi_label"
					app:layout_constraintStart_toEndOf="@+id/textView_bmi_label"
					app:layout_constraintTop_toTopOf="@+id/textView_bmi_label"
					tools:text="---" />
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/profile_bmr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_margin"
			app:cardBackgroundColor="?attr/colorSurfaceSubtle"
			android:elevation="@dimen/elevation_medium"
			app:cardCornerRadius="@dimen/default_corner">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/default_padding">

				<TextView
					android:id="@+id/textView_bmr_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/default_margin"
					android:text="@string/profile_bmr_label"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:drawableStartCompat="@drawable/ic_more_info"
					android:drawablePadding="@dimen/info_icon_padding"
					android:foreground="@drawable/ripple"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/textView_bmi_label" />

				<TextView
					android:id="@+id/textView_bmr_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/default_margin"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:layout_constraintBottom_toBottomOf="@+id/textView_bmr_label"
					app:layout_constraintStart_toEndOf="@+id/textView_bmr_label"
					app:layout_constraintTop_toTopOf="@+id/textView_bmr_label"
					tools:text="---" />
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/profile_data_entry"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_margin"
			app:cardBackgroundColor="?attr/colorSurfaceSubtle"
			android:elevation="@dimen/elevation_medium"
			app:cardCornerRadius="@dimen/default_corner">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/default_padding">

				<TextView
					android:id="@+id/textView_height_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/profile_height_label"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_height_cm"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@+id/textView_height_title"
					app:layout_constraintTop_toBottomOf="@+id/textView_height_title">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/TextInputEditText_height_cm"
						android:layout_width="96dp"
						android:layout_height="wrap_content"
						android:digits="0123456789\n"
						android:hint="@string/profile_height_metric_label"
						android:inputType="number"
						android:imeOptions="actionDone"
						android:singleLine="true" />
				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_height_imper_feet"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@+id/textView_height_title"
					app:layout_constraintTop_toBottomOf="@+id/textView_height_title">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/TextInputEditText_height_imper_feet"
						android:layout_width="64dp"
						android:layout_height="wrap_content"
						android:digits="0123456789\n"
						android:hint="@string/profile_height_imper_feet_label"
						android:inputType="number"
						android:singleLine="true"
						android:imeOptions="actionDone" />
				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_height_imper_inches"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/default_margin"
					app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_height_imper_feet"
					app:layout_constraintStart_toEndOf="@+id/textInputLayout_height_imper_feet">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/TextInputEditText_height_imper_inches"
						android:layout_width="96dp"
						android:layout_height="wrap_content"
						android:digits="0123456789\n"
						android:hint="@string/profile_height_imper_inches_label"
						android:inputType="number"
						android:imeOptions="actionDone"
						android:singleLine="true" />
				</com.google.android.material.textfield.TextInputLayout>

				<TextView
					android:id="@+id/textView_profile_age"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/default_margin"
					android:text="@string/profile_age_label"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/textInputLayout_height_cm" />

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_age"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@+id/textView_profile_age"
					app:layout_constraintTop_toBottomOf="@+id/textView_profile_age">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/TextInputEditText_age"
						android:layout_width="64dp"
						android:layout_height="wrap_content"
						android:digits="0123456789\n"
						android:hint="@string/profile_age_years"
						android:inputType="number"
						android:imeOptions="actionDone"
						android:singleLine="true" />
				</com.google.android.material.textfield.TextInputLayout>

				<TextView
					android:id="@+id/textView_profile_weight_pounds"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/default_margin"
					android:layout_marginTop="@dimen/default_margin"
					android:text="@string/profile_weight_label"
					android:textAppearance="@style/TextAppearance.FastTrackTheme.Headline5"
					app:layout_constraintStart_toEndOf="@+id/textInputLayout_age"
					app:layout_constraintTop_toBottomOf="@+id/textInputLayout_height_imper_feet" />

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_weight_pounds"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@+id/textView_profile_weight_pounds"
					app:layout_constraintTop_toBottomOf="@+id/textView_profile_age">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/TextInputEditText_weight_pounds"
						android:layout_width="96dp"
						android:layout_height="wrap_content"
						android:digits="0123456789."
						android:hint="@string/profile_weight_pounds_label"
						android:inputType="number"
						android:singleLine="true" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_weight_kg"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@+id/textView_profile_weight_pounds"
					app:layout_constraintTop_toBottomOf="@+id/textView_profile_age">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/TextInputEditText_weight_kg"
						android:layout_width="96dp"
						android:layout_height="wrap_content"
						android:digits="0123456789."
						android:hint="@string/profile_weight_kg_label"
						android:inputType="number"
						android:imeOptions="actionDone"
						android:singleLine="true" />

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:text="@string/profile_metric_switch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/metric_switch"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintEnd_toEndOf="parent" />

				<RadioGroup
					android:id="@+id/gender_button_ground"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/metric_switch">

					<RadioButton
						android:id="@+id/gender_button_male"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/profile_gender_male" />

					<RadioButton
						android:id="@+id/gender_button_female"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/profile_gender_female" />
				</RadioGroup>

			</androidx.constraintlayout.widget.ConstraintLayout>

		</com.google.android.material.card.MaterialCardView>

	</LinearLayout>
</ScrollView>