<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/default_padding"
	tools:context=".FastingFragment">

	<TextView
		android:id="@+id/textview_title"
		style="?textAppearanceHeadline1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@+id/chronometer"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		tools:text="Status" />

	<TextView
		android:id="@+id/chronometer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="00:00"
		android:textSize="42sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textview_stage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Display1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/chronometer"
		tools:text="Stage" />

	<TextView
		android:id="@+id/textview_stage_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview_stage"
		tools:text="description" />

	<TextView
		android:id="@+id/textview_next_stage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview_stage_description"
		tools:text="next stage" />

	<Button
		android:id="@+id/button_start_fast"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_fast_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview_next_stage" />

	<Button
		android:id="@+id/button_start_fast_advanced"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_fast_button_advanced"
		app:layout_constraintStart_toEndOf="@id/button_start_fast"
		app:layout_constraintTop_toTopOf="@+id/button_start_fast" />

	<Button
		android:id="@+id/button_end_fast"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/end_fast_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textview_next_stage"
		app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>